--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,8 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.3"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
