--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "v-calendar": "^3.0.0-alpha.6",
         "vue": "^3.0.0",
         "vue-axios": "^3.4.0",
-        "vue-router": "^4.0.12"
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
