--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
         "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "core-js": "^3.6.5",
+        "k-progress": "^1.5.0",
+        "k-progress-v3": "^1.0.0",
+        "mitt": "^3.0.0",
         "v-calendar": "^3.0.0-alpha.6",
         "vue": "^3.0.0",
         "vue-axios": "^3.4.0",
+        "vue-multiple-progress": "^1.6.0",
         "vue-router": "^4.0.12",
+        "vue-simple-progress": "^1.1.1",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
