--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "k-progress": "^1.5.0",
         "k-progress-v3": "^1.0.0",
         "mitt": "^3.0.0",
+        "moment": "^2.29.1",
         "v-calendar": "^3.0.0-alpha.6",
         "vue": "^3.0.0",
         "vue-axios": "^3.4.0",
